moved images to another directory and removed duplicate index.html file

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
   <h1>Odin Recipes</h1>
   <ul>
-  <li><a href="recipes/toblerone_mousse.html">Toblerone Mousse</a></li>
-  <li><a href="recipes/marinated_berries.html">Marinated Berries</a></li>
-  <li><a href="recipes/lemon_sorbet.html">Lemon Sorbet</a></li>
+  <li><a href="./recipes/toblerone_mousse.html">Toblerone Mousse</a></li>
+  <li><a href="./recipes/marinated_berries.html">Marinated Berries</a></li>
+  <li><a href="./recipes/lemon_sorbet.html">Lemon Sorbet</a></li>
 </ul>
 </body>
 
