added styles.css sheet to Odin Recipes and styled the recipe pages

--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
   <h1>Odin Recipes</h1>
   <ul>
-  <li><a href="./toblerone_mousse.html">Toblerone Mousse</a></li>
-  <li><a href="./marinated_berries.html">Marinated Berries</a></li>
-  <li><a href="./lemon_sorbet.html">Lemon Sorbet</a></li>
+  <p><li><a href="./toblerone_mousse.html">Toblerone Mousse</a></li></p>
+  <img src="./images/tobleronemousse.jpg" alt="Toblerone Mousse" height="100" width="auto">
+  <p><li><a href="./marinated_berries.html">Marinated Berries</a></li></p>
+  <img src="./images/marinatedberries.jpg" alt="Marinated Berries" height="100" width="auto">
+  <p><li><a href="./lemon_sorbet.html">Lemon Sorbet</a></li></p>
+  <img src="./images/lemonsorbet.jpg" alt="Lemon Sorbet" height="100" width="auto">
 </ul>
 </body>
 
