--- a/lemon_sorbet.html
+++ b/lemon_sorbet.html
@@ -1,3 +1,15 @@
+<DOCTYPE! html>
+
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <title>Lemon Sorbet</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+    <p><a href="./index.html">back to Odin Recipes</a></p>
 <h1>Lemon Sorbet</h1>
 <p>
     <img src="./images/lemonsorbet.jpg" alt="lemonsorbet">
@@ -19,6 +31,7 @@
 </p>
 
 <p>
+    <h4>Steps</h4>
     <ol>
         <li>Add 75g of powdered sugar, syrup, juice from 4 lemons, zest from 2 lemons to a metal mixing bowl</li>
         <li>Mix well, cover, and put into freezer for 1 hour</li>
@@ -26,4 +39,5 @@
         <li>Fold egg mixture carefully into the slightly frozen lemon water</li>
         <li>Cover, and put back into the freezer for about 3 more hours. Stir carefully 2 or 3 times while the sorbet is freezing</li>
     </ol>
-</p>
+</body>
+</html>
