--- a/marinated_berries.html
+++ b/marinated_berries.html
@@ -1,4 +1,17 @@
+<DOCTYPE! html>
+
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <title>Marinated Berries</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+    <p><a href="./index.html">back to Odin Recipes</a></p>
 <h1>Marinated Berries</h1>
+
 <p>
     <img src="./images/marinatedberries.jpg" alt="marinatedberries">
     <h4>Description</h4>
@@ -28,3 +41,5 @@
         <li>Cut the peppermint leaves thinly and sprinkle over the berries</li>
     </ol>
 </p>
+</body>
+</html>
