--- a/toblerone_mousse.html
+++ b/toblerone_mousse.html
@@ -1,3 +1,15 @@
+<DOCTYPE! html>
+
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <title>Toblerone Mousse</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+    <p><a href="./index.html">back to Odin Recipes</a></p>
 <h1>Toblerone Mousse</h1>
 
 <img src="images/tobleronemousse.jpg" alt="tobleronemousse">
@@ -33,3 +45,5 @@ you might think and well-worth the effort.
         <li>Cover and store in the refrigerator for 3 hours until firm</li>
     </ol>
 </p>
+</body>
+</html>
